src/test/ui/error-codes/E0005.stderr
error[E0005]: refutable pattern in local binding: `None` not covered
  --> $DIR/E0005.rs:3:9
   |
LL |     let Some(y) = x;
   |         ^^^^^^^ pattern `None` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
